@@ -2443,6 +2443,14 @@ ZEND_BEGIN_ARG_INFO_EX(arginfo_stream_socket_enable_crypto, 0, 0, 2)
 	ZEND_ARG_INFO(0, cryptokind)
 	ZEND_ARG_INFO(0, sessionstream)
 ZEND_END_ARG_INFO()
+
+#ifdef HAVE_SHUTDOWN
+static
+ZEND_BEGIN_ARG_INFO(arginfo_stream_socket_shutdown, 0)
+	ZEND_ARG_INFO(0, stream)
+	ZEND_ARG_INFO(0, how)
+ZEND_END_ARG_INFO()
+#endif
 /* }}} */
 /* {{{ string.c */
 static
@@ -3517,6 +3525,9 @@ zend_function_entry basic_functions[] = {
 	PHP_FE(stream_socket_recvfrom,											arginfo_stream_socket_recvfrom)
 	PHP_FE(stream_socket_sendto,											arginfo_stream_socket_sendto)
 	PHP_FE(stream_socket_enable_crypto,										arginfo_stream_socket_enable_crypto)
+#ifdef HAVE_SHUTDOWN
+	PHP_FE(stream_socket_shutdown,											arginfo_stream_socket_shutdown)
+#endif
 #if HAVE_SOCKETPAIR
 	PHP_FE(stream_socket_pair,												arginfo_stream_socket_pair)
 #endif
